[package]
name = "linkg16"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.3"
ark-ff = "0.3"
ark-groth16 = "0.3"
ark-relations = "0.3"
ark-serialize = { version = "0.3", features = [ "derive" ] }
ark-std = "0.3"
merlin = "3"

[features]
default = ["std", "asm", "parallel"]
asm = ["ark-ff/asm"]
std = ["ark-groth16/std"]
parallel = ["ark-groth16/parallel"]

[dev-dependencies]
ark-bls12-381 = "0.3"
ark-r1cs-std = "0.3"
ark-crypto-primitives = { version = "0.3", features = [ "r1cs" ] }
criterion = { version = "0.3", features = [ "html_reports" ] }

[profile.release]
debug = true

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
